--- a/appRestauranteEJB/.settings/org.eclipse.wst.common.component
+++ b/appRestauranteEJB/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="appRestauranteEJB">
-        <wb-resource deploy-path="/" source-path="/ejbModule" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/" source-path="/ejbModule"/>
         <property name="java-output-path" value="/appRestauranteEJB/build/classes"/>
     </wb-module>
 </project-modules>
